updating wheel of fortune

--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -1,4 +1,6 @@
 {
     "home": "Trang chủ",
-    "welcome.title": "Hôm nay ăn gì"
+    "welcome.title": "Hôm nay ăn gì",
+    "welcome.subtitle": "Hôm nay ăn gì?” dường như là câu hỏi quen thuộc mà đôi khi chúng ta tự hỏi chính mình mỗi ngày. Vậy thì hôm nay không cần phải lo lắng nữa, Dratini sẽ đem đến cho bạn vòng quay \"Hôm nay ăn gì\".",
+    "build-your-own-menus": "Tạo thực đơn cho riêng mình"
 }
