--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,4 +1,6 @@
 {
     "home": "Home",
-    "welcome.title": "What to eat today"
+    "welcome.title": "What to eat today",
+    "welcome.subtitle": "\"what to eat today?\" This is the most popular question that everyone wonder. Don't worry, today Dratini brings you the spinner \"what to eat today\".",
+    "build-your-own-menus": "Build your own menus"
 }
