--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -4,5 +4,7 @@
 	"welcome.subtitle": "\"What to eat today?\" This is the most popular question that everyone wonder. Don't worry, today Dratini brings you the spinner \"what to eat today\".",
 	"build-your-own-menus": "Build your own menus",
 	"categories": "Categories",
-    "category.subtitle": "Dish categories are a way of organizing dishes into groups based on their main ingredients, cooking method, or overall purpose. This can be helpful for cooks when planning meals, for restaurants when organizing their menus, and for diners when browsing for something to eat."
+    "category.subtitle": "Dish categories are a way of organizing dishes into groups based on their main ingredients, cooking method, or overall purpose. This can be helpful for cooks when planning meals, for restaurants when organizing their menus, and for diners when browsing for something to eat.",
+    "milk-and-dairy": "Milk and Dairy",
+    "grains": "Grains"
 }
