--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -1,10 +1,23 @@
 {
-    "home": "Trang chủ",
-    "welcome.title": "Hôm nay ăn gì",
-    "welcome.subtitle": "Hôm nay ăn gì?” dường như là câu hỏi quen thuộc mà đôi khi chúng ta tự hỏi chính mình mỗi ngày. Vậy thì hôm nay không cần phải lo lắng nữa, Dratini sẽ đem đến cho bạn vòng quay \"Hôm nay ăn gì\".",
-    "build-your-own-menus": "Tạo thực đơn cho riêng mình",
-    "categories": "Danh mục món ăn",
-    "category.subtitle": "Danh mục món ăn là cách sắp xếp các món ăn thành các nhóm dựa trên nguyên liệu chính, phương pháp nấu hoặc mục đích chung của chúng. Điều này có thể hữu ích cho người đầu bếp khi lên kế hoạch cho bữa ăn, cho nhà hàng khi sắp xếp thực đơn và cho thực khách khi duyệt tìm món nào đó.",
-    "milk-and-dairy": "Sữa và Bơ",
-    "grains": "Ngũ Cốc"
+	"home": "Trang chủ",
+	"welcome.title": "Hôm nay ăn gì",
+	"welcome.subtitle": "Hôm nay ăn gì?” dường như là câu hỏi quen thuộc mà đôi khi chúng ta tự hỏi chính mình mỗi ngày. Vậy thì hôm nay không cần phải lo lắng nữa, Dratini sẽ đem đến cho bạn vòng quay \"Hôm nay ăn gì\".",
+	"build-your-own-menus": "Tạo thực đơn cho riêng mình",
+	"categories": "Danh mục món ăn",
+	"category.subtitle": "Danh mục món ăn là cách sắp xếp các món ăn thành các nhóm dựa trên nguyên liệu chính, phương pháp nấu hoặc mục đích chung của chúng. Điều này có thể hữu ích cho người đầu bếp khi lên kế hoạch cho bữa ăn, cho nhà hàng khi sắp xếp thực đơn và cho thực khách khi duyệt tìm món nào đó.",
+	"milk-and-dairy": "Sữa và Bơ",
+	"grains": "Ngũ Cốc",
+	"beverages-nonalcoholic": "Đồ uống không cồn",
+	"protein-foods": "Thực phẩm giàu chất đạm",
+	"snacks-and-sweets": "Đồ ăn vặt và đồ ngọt",
+	"alcoholic-beverages": "Đồ uống có cồn",
+	"water": "Water",
+	"fats-and-oils": "Fats and Oils",
+	"mixed-dishes": "Mixed Dishes",
+	"fruit": "Fruit",
+	"condiments-and-sauces": "Condiments and Sauces",
+	"sugars": "Sugars",
+	"vegetables": "Vegetables",
+	"infant-formula-and-baby-food": "Infant Formula and Baby Food",
+	"other": "Other"
 }
