added food categories

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -8,7 +8,7 @@
     "milk-and-dairy": "Milk and Dairy",
     "grains": "Grains",
 	"beverages-nonalcoholic": "Beverages Nonalcoholic",
-	"protein-foods": "Protein Food",
+	"protein-foods": "Protein Foods",
 	"snacks-and-sweets": "Snacks and Sweets",
 	"alcoholic-beverages": "Alcoholic Beverages",
 	"water": "Water",
