--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -19,5 +19,15 @@
 	"sugars": "Đồ Ngọt",
 	"vegetables": "Rau Củ",
 	"infant-formula-and-baby-food": "Sữa Bột và Thức ăn trẻ em",
-	"other": "Khác"
+	"other": "Khác",
+	"breakfast": "Bữa Sáng",
+	"brunch": "Bữa lỡ",
+	"lunch": "Bữa Trưa",
+	"dinner": "Bữa Tối",
+	"burger": "Burger",
+	"salad": "Salad",
+	"soup": "Súp",
+	"appetizer": "Món khai vị",
+	"dessert": "Món tráng miệng",
+	"hot-pot": "Món lẩu"
 }
