--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -21,7 +21,7 @@
 	"infant-formula-and-baby-food": "Sữa Bột và Thức ăn trẻ em",
 	"other": "Khác",
 	"breakfast": "Bữa Sáng",
-	"brunch": "Bữa lỡ",
+	"brunch": "Bữa Xế",
 	"lunch": "Bữa Trưa",
 	"dinner": "Bữa Tối",
 	"burger": "Burger",
