--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -29,5 +29,6 @@
 	"soup": "Soup",
 	"appetizer": "Appetizer",
 	"dessert": "Dessert",
-	"hot-pot": "Hotpot"
+	"hot-pot": "Hotpot",
+	"dish-management": "Dish Management"
 }
