--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -29,5 +29,6 @@
 	"soup": "Súp",
 	"appetizer": "Món khai vị",
 	"dessert": "Món tráng miệng",
-	"hot-pot": "Món lẩu"
+	"hot-pot": "Món lẩu",
+	"dish-management": "Quản Lý Món Ăn"
 }
