adding dishes management

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -30,5 +30,6 @@
 	"appetizer": "Appetizer",
 	"dessert": "Dessert",
 	"hot-pot": "Hotpot",
-	"dish-management": "Dish Management"
+	"dish-management": "Dish Management",
+	"add": "Add"
 }
