--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -30,5 +30,6 @@
 	"appetizer": "Món khai vị",
 	"dessert": "Món tráng miệng",
 	"hot-pot": "Món lẩu",
-	"dish-management": "Quản Lý Món Ăn"
+	"dish-management": "Quản Lý Món Ăn",
+	"add": "Thêm"
 }
