--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -31,5 +31,7 @@
 	"dessert": "Món tráng miệng",
 	"hot-pot": "Món lẩu",
 	"dish-management": "Quản Lý Món Ăn",
-	"add": "Thêm"
+	"add": "Thêm",
+	"editor": "Công cụ biên tập",
+	"raw-html": "Raw Html"
 }
