adding multi select

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -46,5 +46,8 @@
 	"meal-categories": "Meal Categories",
 	"ingredient-categories": "Ingredient Categories",
 	"thumbnail": "Thumbnail",
-	"in-minute": "In minute"
+	"in-minute": "In minute",
+	"difficulty.HARD": "Hard",
+	"difficulty.MEDIUM": "Medium",
+	"difficulty.EASY": "Easy"
 }
