--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -49,5 +49,7 @@
 	"in-minute": "Đơn vị phút",
 	"difficulty.HARD": "Khó",
 	"difficulty.MEDIUM": "Trung bình",
-	"difficulty.EASY": "Dễ"
+	"difficulty.EASY": "Dễ",
+	"successfully": "Thành công",
+	"fail": "Thất bại"
 }
