--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -51,5 +51,35 @@
 	"difficulty.MEDIUM": "Medium",
 	"difficulty.EASY": "Easy",
 	"successfully": "Successfully",
-	"fail": "Fail"
+	"fail": "Fail",
+	"minute": "Minute(s)",
+	"BREAKFAST": "BREAKFAST",
+	"LUNCH": "LUNCH",
+	"BRUNCH": "BRUNCH",
+	"DINNER": "DINNER",
+	"BURGER": "BURGER",
+	"SALAD": "SALAD",
+	"SOUP": "SOUP",
+	"APPETIZER": "APPETIZER",
+	"DESSERT": "DESSERT",
+	"HOTPOT": "HOTPOT",
+	"NORTH_VN": "NORTH VIET NAM",
+	"CENTRAL_VN": "CENTRAL VIET NAM",
+	"SOUTH_VN": "SOUTH VIET NAM",
+	"MILK AND DAIRY": "MILK AND DAIRY",
+	"GRAINS": "GRAINS",
+	"BEVERAGES NONALCOHOLIC": "BEVERAGES NONALCOHOLIC",
+	"PROTEIN_FOODS": "PROTEIN FOODS",
+	"SNACKS AND SWEETS": "SNACKS AND SWEETS",
+	"ALCOHOLIC BEVERAGES": "ALCOHOLIC BEVERAGES",
+	"WATER": "WATER",
+	"FATS AND OILS": "FATS AND OILS",
+	"MIXED DISHES": "MIXED DISHES",
+	"FRUIT": "FRUIT",
+	"CONDIMENTS AND SAUCES": "CONDIMENTS AND SAUCES",
+	"SUGARS": "SUGARS",
+	"VEGETABLES": "VEGETABLES",
+	"INFANT FORMULA AND BABY FOOD": "INFANT FORMULA AND BABY FOOD",
+	"OTHER": "OTHER",
+	"login": "Login"
 }
