--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -4,9 +4,9 @@
 	"welcome.subtitle": "\"What to eat today?\" This is the most popular question that everyone wonder. Don't worry, today Dratini brings you the spinner \"what to eat today\".",
 	"build-your-own-menus": "Build your own menus",
 	"categories": "Categories",
-    "category.subtitle": "Dish categories are a way of organizing dishes into groups based on their main ingredients, cooking method, or overall purpose. This can be helpful for cooks when planning meals, for restaurants when organizing their menus, and for diners when browsing for something to eat.",
-    "milk-and-dairy": "Milk and Dairy",
-    "grains": "Grains",
+	"category.subtitle": "Dish categories are a way of organizing dishes into groups based on their main ingredients, cooking method, or overall purpose. This can be helpful for cooks when planning meals, for restaurants when organizing their menus, and for diners when browsing for something to eat.",
+	"milk-and-dairy": "Milk and Dairy",
+	"grains": "Grains",
 	"beverages-nonalcoholic": "Beverages Nonalcoholic",
 	"protein-foods": "Protein Foods",
 	"snacks-and-sweets": "Snacks and Sweets",
@@ -30,5 +30,56 @@
 	"appetizer": "Appetizer",
 	"dessert": "Dessert",
 	"hot-pot": "Hotpot",
-	"dish-management": "Dish Management"
+	"dish-management": "Dish Management",
+	"add": "Add",
+	"editor": "Editor",
+	"raw-html": "Raw Html",
+	"preview": "Preview",
+	"tags-placeholder": "Tags separate by comma",
+	"author": "Author",
+	"title": "Title",
+	"content": "Content",
+	"preparation-time": "Preparation Time",
+	"cooking-time": "Cooking Time",
+	"difficult-level": "Difficult Level",
+	"rating": "Rating",
+	"meal-categories": "Meal Categories",
+	"ingredient-categories": "Ingredient Categories",
+	"thumbnail": "Thumbnail",
+	"in-minute": "In minute",
+	"difficulty.HARD": "Hard",
+	"difficulty.MEDIUM": "Medium",
+	"difficulty.EASY": "Easy",
+	"successfully": "Successfully",
+	"fail": "Fail",
+	"minute": "Minute(s)",
+	"BREAKFAST": "BREAKFAST",
+	"LUNCH": "LUNCH",
+	"BRUNCH": "BRUNCH",
+	"DINNER": "DINNER",
+	"BURGER": "BURGER",
+	"SALAD": "SALAD",
+	"SOUP": "SOUP",
+	"APPETIZER": "APPETIZER",
+	"DESSERT": "DESSERT",
+	"HOTPOT": "HOTPOT",
+	"NORTH_VN": "NORTH VIET NAM",
+	"CENTRAL_VN": "CENTRAL VIET NAM",
+	"SOUTH_VN": "SOUTH VIET NAM",
+	"MILK AND DAIRY": "MILK AND DAIRY",
+	"GRAINS": "GRAINS",
+	"BEVERAGES NONALCOHOLIC": "BEVERAGES NONALCOHOLIC",
+	"PROTEIN_FOODS": "PROTEIN FOODS",
+	"SNACKS AND SWEETS": "SNACKS AND SWEETS",
+	"ALCOHOLIC BEVERAGES": "ALCOHOLIC BEVERAGES",
+	"WATER": "WATER",
+	"FATS AND OILS": "FATS AND OILS",
+	"MIXED DISHES": "MIXED DISHES",
+	"FRUIT": "FRUIT",
+	"CONDIMENTS AND SAUCES": "CONDIMENTS AND SAUCES",
+	"SUGARS": "SUGARS",
+	"VEGETABLES": "VEGETABLES",
+	"INFANT FORMULA AND BABY FOOD": "INFANT FORMULA AND BABY FOOD",
+	"OTHER": "OTHER",
+	"login": "Login"
 }
