--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -9,7 +9,7 @@
 	"grains": "Ngũ Cốc",
 	"beverages-nonalcoholic": "Đồ uống không cồn",
 	"protein-foods": "Thực phẩm giàu chất đạm",
-	"snacks-and-sweets": "Đồ ăn vặt và đồ ngọt",
+	"snacks-and-sweets": "Đồ ăn nhẹ và đồ ngọt",
 	"alcoholic-beverages": "Đồ uống có cồn",
 	"water": "Nước",
 	"fats-and-oils": "Chất béo và dầu",
@@ -18,7 +18,7 @@
 	"condiments-and-sauces": "Gia Vị và Nước Sốt",
 	"sugars": "Đồ Ngọt",
 	"vegetables": "Rau Củ",
-	"infant-formula-and-baby-food": "Sữa Bột và Thức ăn trẻ em",
+	"infant-formula-and-baby-food": "Sữa Bột và Thức cho em bé",
 	"other": "Khác",
 	"breakfast": "Bữa Sáng",
 	"brunch": "Bữa Xế",
@@ -30,5 +30,56 @@
 	"appetizer": "Món khai vị",
 	"dessert": "Món tráng miệng",
 	"hot-pot": "Món lẩu",
-	"dish-management": "Quản Lý Món Ăn"
+	"dish-management": "Quản Lý Món Ăn",
+	"add": "Thêm",
+	"editor": "Công cụ biên tập",
+	"raw-html": "Raw Html",
+	"preview": "Xem Trước",
+	"tags-placeholder": "Tags phân cách bởi dấu phẩy",
+	"author": "Tác giả",
+	"title": "Tiêu đề",
+	"content": "Nội Dung",
+	"preparation-time": "Thời gian chuẩn bị",
+	"cooking-time": "Thời gian nấu",
+	"difficult-level": "Độ khó",
+	"rating": "Đánh giá",
+	"meal-categories": "Phân loại món ăn",
+	"ingredient-categories": "Phân loại nguyên liệu",
+	"thumbnail": "Ảnh bìa",
+	"in-minute": "Đơn vị phút",
+	"difficulty.HARD": "Khó",
+	"difficulty.MEDIUM": "Trung bình",
+	"difficulty.EASY": "Dễ",
+	"successfully": "Thành công",
+	"fail": "Thất bại",
+	"minute": "Phút",
+	"BREAKFAST": "BỮA SÁNG",
+	"LUNCH": "BỮA TRƯA",
+	"BRUNCH": "BỮA LỠ",
+	"DINNER": "BỮA TỐI",
+	"BURGER": "BURGER",
+	"SALAD": "SALAD",
+	"SOUP": "SÚP",
+	"APPETIZER": "KHAI VỊ",
+	"DESSERT": "TRÁNG MIỆNG",
+	"HOTPOT": "LẨU",
+	"NORTH_VN": "MIỀN BẮC VIỆT NAM",
+	"CENTRAL_VN": "MIỀN TRUNG VIỆT NAM",
+	"SOUTH_VN": "MIỀN NAM VIỆT NAM",
+	"MILK AND DAIRY": "SỮA VÀ BƠ",
+	"GRAINS": "NGŨ CỐC",
+	"BEVERAGES NONALCOHOLIC": "ĐỒ UỐNG KHÔNG CỒN",
+	"PROTEIN_FOODS": "THỰC PHẨM GIÀU CHẤT ĐẠM",
+	"SNACKS AND SWEETS": "ĐỒ ĂN NHẸ VÀ ĐỒ NGỌT",
+	"ALCOHOLIC BEVERAGES": "ĐỒ UỐNG CÓ CỒN",
+	"WATER": "NƯỚC",
+	"FATS AND OILS": "CHẤT BÉO VÀ DẦU",
+	"MIXED DISHES": "MÓN TỔNG HỢP",
+	"FRUIT": "TRÁI CÂY",
+	"CONDIMENTS AND SAUCES": "GIA VỊ VÀ NƯỚC SỐT",
+	"SUGARS": "ĐƯỜNG",
+	"VEGETABLES": "RAU CỦ",
+	"INFANT FORMULA AND BABY FOOD": "SỮA BỘT VÀ THỨC ĂN CHO EM BÉ",
+	"OTHER": "KHÁC",
+	"login": "Đăng Nhập"
 }
