--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -85,5 +85,11 @@
 	"what-are-you-looking-for": "Bạn đang tìm gì vậy?",
 	"dish": "Món ăn",
 	"metadata.dish.title": "Hôm nay ăn gì nhỉ?",
-	"metadata.dish.description": "Bạn không biết ăn gì hôm nay? Đừng lo, hãy để mình giới thiệu nhé!"
+	"metadata.dish.description": "Bạn không biết ăn gì hôm nay? Đừng lo, hãy để mình giới thiệu nhé!",
+	"metadata.dish.breakfast.title": "Chọn gì cho bữa sáng?",
+	"metadata.dish.breakfast.description": "Bữa ăn sáng hay còn gọi là bữa sáng, bữa lót dạ hay bữa điểm tâm là bữa ăn đầu tiên trong ngày, thường là vào buổi sáng sau khi thức dậy với thực đơn thường gồm những món thức ăn nhanh, nhẹ kèm theo các món tráng miệng và giải khát như trà, sữa, cà phê, nước giải khát. Mỗi một quốc gia, dân tộc, vùng miền, dân tộc, mỗi nền văn hóa trên thế giới đều có những bữa điểm tâm đa dạng theo cách khác nhau.",
+	"back": "Quay lại",
+	"discover": "Khám phá",
+	"short-description": "Mô tả ngắn",
+	"view-detail": "Xem Chi Tiết"
 }
