--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -91,5 +91,6 @@
 	"back": "Back",
 	"discover": "Discover",
 	"short-description": "Short Description",
-	"view-detail": "View Detail"
+	"view-detail": "View Detail",
+	"ingredient-management": "Ingredient Management"
 }
