--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -91,5 +91,6 @@
 	"back": "Quay lại",
 	"discover": "Khám phá",
 	"short-description": "Mô tả ngắn",
-	"view-detail": "Xem Chi Tiết"
+	"view-detail": "Xem Chi Tiết",
+	"ingredient-management": "Quản lý nguyên liệu"
 }
