--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -106,5 +106,6 @@
 	"updated-at": "Cập Nhật Lúc",
 	"ingredients": "Nguyên Liệu",
 	"quantity": "Số Lượng",
-	"note": "Ghi Chú"
+	"note": "Ghi Chú",
+	"please-login-again": "Vui lòng đăng nhập lại"
 }
