Feature/client dishes (#4)
* adding

* updating dish detail

* adding ingredients

* adding detail ingredients

* add ingredient form

* update add ingredient

* update

* update

* refactor login

* [WTE-003] Ingredient FE

---------

Co-authored-by: Khoa <khoa@wearebloom.com.au>

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -81,5 +81,37 @@
 	"VEGETABLES": "VEGETABLES",
 	"INFANT FORMULA AND BABY FOOD": "INFANT FORMULA AND BABY FOOD",
 	"OTHER": "OTHER",
-	"login": "Login"
+	"login": "Login",
+	"what-are-you-looking-for": "What are you looking for?",
+	"dish": "Dish",
+	"metadata.dish.title": "What to eat today?",
+	"metadata.dish.description": "You don't know what to eat today? Don't worry, let me introduce!",
+	"metadata.dish.breakfast.title": "Which dishes are for breakfast?",
+	"metadata.dish.breakfast.description": "Breakfast is the first meal of the day usually eaten in the morning. The word in English refers to breaking the fasting period of the previous night. Various \"typical\" or \"traditional\" breakfast menus exist, with food choices varying by regions and traditions worldwide.",
+	"back": "Back",
+	"discover": "Discover",
+	"short-description": "Short Description",
+	"view-detail": "View Detail",
+	"ingredient-management": "Ingredient Management",
+	"measure": "Measure",
+	"calories": "Calories",
+	"carbohydrate": "Carbohydrate",
+	"fat": "Fat",
+	"weight": "Weight",
+	"protein": "Protein",
+	"cholesterol": "Cholesterol",
+	"sodium": "Sodium",
+	"submit": "Submit",
+	"created-at": "Created At",
+	"updated-at": "Updated At",
+	"ingredients": "Ingredients",
+	"quantity": "Quantity",
+	"note": "Note",
+	"please-login-again": "Please login again",
+	"create-new": "Create new",
+	"next": "Next",
+	"prev": "Prev",
+	"input-text-to-search": "Input text to search",
+	"videos": "Videos",
+	"youtube-url": "Youtube URL"
 }
