--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -81,5 +81,37 @@
 	"VEGETABLES": "RAU CỦ",
 	"INFANT FORMULA AND BABY FOOD": "SỮA BỘT VÀ THỨC ĂN CHO EM BÉ",
 	"OTHER": "KHÁC",
-	"login": "Đăng Nhập"
+	"login": "Đăng Nhập",
+	"what-are-you-looking-for": "Bạn đang tìm gì vậy?",
+	"dish": "Món ăn",
+	"metadata.dish.title": "Hôm nay ăn gì nhỉ?",
+	"metadata.dish.description": "Bạn không biết ăn gì hôm nay? Đừng lo, hãy để mình giới thiệu nhé!",
+	"metadata.dish.breakfast.title": "Chọn gì cho bữa sáng?",
+	"metadata.dish.breakfast.description": "Bữa ăn sáng hay còn gọi là bữa sáng, bữa lót dạ hay bữa điểm tâm là bữa ăn đầu tiên trong ngày, thường là vào buổi sáng sau khi thức dậy với thực đơn thường gồm những món thức ăn nhanh, nhẹ kèm theo các món tráng miệng và giải khát như trà, sữa, cà phê, nước giải khát. Mỗi một quốc gia, dân tộc, vùng miền, dân tộc, mỗi nền văn hóa trên thế giới đều có những bữa điểm tâm đa dạng theo cách khác nhau.",
+	"back": "Quay lại",
+	"discover": "Khám phá",
+	"short-description": "Mô tả ngắn",
+	"view-detail": "Xem Chi Tiết",
+	"ingredient-management": "Quản lý nguyên liệu",
+	"measure": "Đơn vị đo lường",
+	"calories": "Calo",
+	"carbohydrate": "Cacbohydrat",
+	"fat": "Chất Béo",
+	"weight": "Trọng Lượng",
+	"protein": "Chất Đạm",
+	"cholesterol": "Cholesterol",
+	"sodium": "Natri",
+	"submit": "Lưu",
+	"created-at": "Tạo Lúc",
+	"updated-at": "Cập Nhật Lúc",
+	"ingredients": "Nguyên Liệu",
+	"quantity": "Số Lượng",
+	"note": "Ghi Chú",
+	"please-login-again": "Vui lòng đăng nhập lại",
+	"create-new": "Tạo mới",
+	"next": "Tiếp",
+	"prev": "Trước",
+	"input-text-to-search": "Nhập chữ để tìm",
+	"videos": "Videos",
+	"youtube-url": "Đường dẫn Youtube"
 }
