[WTE-009] Menu bar

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -124,5 +124,8 @@
 	"images": "Images",
 	"reference-over": "Reference over",
 	"search-for-ingredients": "Search for ingredients",
-	"search": "Search"
+	"search": "Search",
+	"wheel-of-fortune": "Wheel Of Fortune",
+	"flipping-cards": "Flipping Cards",
+	"games": "Games"
 }
