--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -124,5 +124,8 @@
 	"images": "Hình ảnh",
 	"reference-over": "Tham chiếu trên",
 	"search-for-ingredients": "Tìm nguyên liệu",
-	"search": "Tìm"
+	"search": "Tìm",
+	"wheel-of-fortune": "Chiếc Nón Kỳ Diệu",
+	"flipping-cards": "Lật Thẻ",
+	"games": "Trò Chơi"
 }
