WTE-012: Pagination for ingredients

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -127,5 +127,6 @@
 	"search": "Search",
 	"wheel-of-fortune": "Wheel Of Fortune",
 	"flipping-cards": "Flipping Cards",
-	"games": "Games"
+	"games": "Games",
+	"all": "All"
 }
