--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -127,5 +127,6 @@
 	"search": "Tìm",
 	"wheel-of-fortune": "Chiếc Nón Kỳ Diệu",
 	"flipping-cards": "Lật Thẻ",
-	"games": "Trò Chơi"
+	"games": "Trò Chơi",
+	"all": "Tất cả"
 }
