--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -128,5 +128,6 @@
 	"wheel-of-fortune": "Wheel Of Fortune",
 	"flipping-cards": "Flipping Cards",
 	"games": "Games",
-	"all": "All"
+	"all": "All",
+	"no-item-info": "There is no item"
 }
