--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -128,5 +128,6 @@
 	"wheel-of-fortune": "Chiếc Nón Kỳ Diệu",
 	"flipping-cards": "Lật Thẻ",
 	"games": "Trò Chơi",
-	"all": "Tất cả"
+	"all": "Tất cả",
+	"no-item-info": "Không có sản phẩm"
 }
