[WTE-013] Pagination for dishes

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -81,6 +81,8 @@
 	"VEGETABLES": "VEGETABLES",
 	"INFANT FORMULA AND BABY FOOD": "INFANT FORMULA AND BABY FOOD",
 	"OTHER": "OTHER",
+	"SWEET_SOUP": "SWEET SOUP",
+	"VITAMIN": "VITAMIN",
 	"login": "Login",
 	"what-are-you-looking-for": "What are you looking for?",
 	"dish": "Dish",
