--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -81,6 +81,8 @@
 	"VEGETABLES": "RAU CỦ",
 	"INFANT FORMULA AND BABY FOOD": "SỮA BỘT VÀ THỨC ĂN CHO EM BÉ",
 	"OTHER": "KHÁC",
+	"SWEET_SOUP": "CHÈ",
+	"VITAMIN": "SINH TỐ",
 	"login": "Đăng Nhập",
 	"what-are-you-looking-for": "Bạn đang tìm gì vậy?",
 	"dish": "Món ăn",
