[WTE-007] Dish filtering

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -139,5 +139,6 @@
 	"info": "Info",
 	"wheel-of-fortune-delete-tips": "To delete dish, drag it outside the wheel",
 	"the-result": "The Result",
-	"add-to-wheel": "Add to wheel"
+	"add-to-wheel": "Add to wheel",
+	"please-select": "Please select"
 }
