--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -139,5 +139,6 @@
 	"info": "Thông tin",
 	"wheel-of-fortune-delete-tips": "Để xoá món ăn, kéo ra ngoài vòng quay",
 	"the-result": "Kết Quả",
-	"add-to-wheel": "Thêm vào vòng xoay"
+	"add-to-wheel": "Thêm vào vòng xoay",
+	"please-select": "Vui lòng chọn"
 }
