[WTE-021] Search dish in admin

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -140,5 +140,7 @@
 	"wheel-of-fortune-delete-tips": "To delete dish, drag it outside the wheel",
 	"the-result": "The Result",
 	"add-to-wheel": "Add to wheel",
-	"please-select": "Please select"
+	"please-select": "Please select",
+	"tags": "Tags",
+	"enter-to-add-tag": "Enter to add"
 }
