--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -140,5 +140,7 @@
 	"wheel-of-fortune-delete-tips": "Để xoá món ăn, kéo ra ngoài vòng quay",
 	"the-result": "Kết Quả",
 	"add-to-wheel": "Thêm vào vòng xoay",
-	"please-select": "Vui lòng chọn"
+	"please-select": "Vui lòng chọn",
+	"tags": "Thẻ",
+	"enter-to-add-tag": "Enter để thêm"
 }
